--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^3.10.0",
+    "apollo-server-micro": "^3.6.4",
+    "graphql": "^16.3.0",
+    "micro-cors": "^0.1.1",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -16,7 +20,9 @@
   "devDependencies": {
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
-    "eslint": "8.11.0",
+    "@typescript-eslint/eslint-plugin": "^5.15.0",
+    "@typescript-eslint/parser": "^5.15.0",
+    "eslint": "^8.11.0",
     "eslint-config-next": "12.1.0",
     "prisma": "^3.10.0",
     "typescript": "4.6.2"
